--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,6 +11,8 @@ html {
   padding: 0;
   overflow-x: hidden;
   background: white;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -34,6 +36,5 @@ html {
 }
 
 ::-webkit-scrollbar {
-  width: 14px;
-  height: 18px;
+  display: none;
 }
