--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,6 +11,7 @@ html {
   padding: 0;
   overflow-x: hidden;
   background: white;
+  color: #006a82;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
@@ -20,9 +21,9 @@ html {
   border: 4px solid transparent;
   background-clip: padding-box;
   -webkit-border-radius: 7px;
-  background-color: #006A82;
+  background-color: #006a82;
   -webkit-box-shadow: inset -1px -1px 0 rgba(0, 0, 0, 0.05),
-  inset 1px 1px 0 rgba(0, 0, 0, 0.05);
+    inset 1px 1px 0 rgba(0, 0, 0, 0.05);
 }
 
 ::-webkit-scrollbar-corner {
@@ -37,4 +38,15 @@ html {
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+@keyframes fade {
+  0% { opacity: 1; transform: translateY(0); }
+  33% { opacity: 0; transform: translateY(-10px); }
+  66% { opacity: 0; transform: translateY(10px); }
+  100% { opacity: 1; transform: translateY(0); }
+}
+
+.my-button:hover span {
+  animation: fade .7s;
 }
